--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -18,6 +18,7 @@
         ->prependFile('/js/form.js')
         ->prependFile('/js/global.js')
         ->prependFile('/js/bootstrap.js')
+        ->prependFile('/js/jquery.md5.js')
         ->prependFile('/js/jquery-2.0.3.js')
 ?>
 </head>
