--- a/application/modules/sudoku/views/scripts/_extra/login-block.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/login-block.phtml
@@ -1,83 +1,7 @@
 <div class="user-login-block">
     <span>
-        Hello, Guest. Do you want <a href="" class="login-button">login</a>?
+        Здравствуй, гость. Хочешь <a href="" class="login-button">залогиниться</a>?
     </span>
 </div>
 
-<div id="login-modal" class="modal hide fade">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
-        <h3>Login or Register?</h3>
-    </div>
-    <div class="modal-body">
-        <div class="login-register show-login-form">
-            <div class="container">
-                <div class="login-container">
-                    <div class="title">
-                        <h3>We know each other?</h3>
-                    </div>
-                    <div class="other-authorizations">
-                        <script src="//ulogin.ru/js/ulogin.js"></script>
-                        <div id="uLogin" data-ulogin="<?php echo $this->uLoginData; ?>"></div>
-                    </div>
-                    <hr class="line-separator">
-                    <div class="login-form">
-                        <form class="login form-horizontal" method="post" action="/user/login">
-                            <input type="hidden" name="submitted" value="1">
-                            <div class="form-message"></div>
-                            <div class="control-group form-field field-login-email">
-                                <input type="text" placeholder="Login or Email" name="login_email" value="" class="message-tooltip" data-placement="right">
-                            </div>
-                            <div class="control-group form-field field-password">
-                                <input type="password" placeholder="Password" name="password" value="" class="message-tooltip" data-placement="right">
-                            </div>
-                            <div class="control-group">
-                                <input class="btn btn-primary submit-form" type="button" value="Yes, it's me!">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="register-container">
-                    <div class="title">
-                        <h3>Introduce yourself</h3>
-                    </div>
-                    <div class="register-form">
-                        <form class="register form-horizontal" method="post" action="/user/register">
-                            <input type="hidden" name="submitted" value="1">
-                            <div class="form-message"></div>
-                            <div class="control-group form-field field-login-email">
-                                <input type="text" placeholder="Login" name="login" value="">
-                                &nbsp;and/or&nbsp;
-                                <input type="text" placeholder="Email" name="email" value="">
-                            </div>
-                            <div class="control-group form-field field-password">
-                                <input type="password" placeholder="Password" name="password" value="" class="message-tooltip" data-placement="right">
-                            </div>
-                            <div class="control-group form-field field-password-repeat">
-                                <input type="password" placeholder="Password (again)" name="password_repeat" value="" class="message-tooltip" data-placement="right">
-                            </div>
-                            <div class="control-group">
-                                <input class="btn btn-primary submit-form" type="button" value="Hello!">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-small-footer">
-                <div class="show-button show-login">
-                    <h5><i class="icon-chevron-left"></i>&nbsp;Login</h5>
-                </div>
-                <div class="show-button show-register">
-                    <h5>Register&nbsp;<i class="icon-chevron-right"></i></h5>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<?php $this->headScript()->appendScript('
-    $(\'#login-modal\').modal({show: false});
-    $(this.document).on(\'click\', \'.login-button\', function(e) {
-        e.preventDefault();
-        $(\'#login-modal\').modal(\'show\');
-    })
-'); ?>
+<?php echo $this->render('_extra/login-modal.phtml'); ?>
