--- a/application/modules/sudoku/views/scripts/_extra/navigation.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/navigation.phtml
@@ -1,14 +1,12 @@
 <div class="navigation-panel">
-    <div class="container">
-        <div class="page-title">
-            <span class="title">Some title</span>
-        </div>
-        <div class="user-block">
-            <?php if ($this->user): ?>
-                <?php echo $this->render('_extra/user-block.phtml'); ?>
-            <?php else: ?>
-                <?php echo $this->render('_extra/login-block.phtml'); ?>
-            <?php endif; ?>
-        </div>
+    <div class="page-title">
+        <span class="title">&nbsp</span>
+    </div>
+    <div class="user-block">
+        <?php if ($this->user): ?>
+            <?php echo $this->render('_extra/user-block.phtml'); ?>
+        <?php else: ?>
+            <?php echo $this->render('_extra/login-block.phtml'); ?>
+        <?php endif; ?>
     </div>
 </div>
