Index page, Create new game, fixes

--- a/application/modules/sudoku/views/scripts/_extra/sudoku-board.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/sudoku-board.phtml
@@ -39,6 +39,9 @@ $getCell = function($row, $col) use ($parameters, $isGray) {
         $classes[] = 'open';
         $classes[] = 'empty';
     }
+    if ($this->hide) {
+        $number = '';
+    }
 ?>
 <td
     class="<?php echo implode(' ', array_filter($classes)); ?>"
