--- a/application/modules/sudoku/views/scripts/index/create.phtml
+++ b/application/modules/sudoku/views/scripts/index/create.phtml
@@ -20,5 +20,5 @@
         </select>
         <button class="btn btn-mini btn-danger new-game">New game</button>
     </div>
-    <?php echo $this->render('_extra/board.phtml'); ?>
+    <?php echo $this->partial('_extra/sudoku-board.phtml'); ?>
 </div>
