--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -523,6 +523,6 @@ ul {
   line-height: 30px;
 }
 /********************************** right col *********************************/
-.new-game {
+.show-new-game-form {
   width: 100%;
 }
