--- a/application/modules/sudoku/views/scripts/_extra/sudoku-game.phtml
+++ b/application/modules/sudoku/views/scripts/_extra/sudoku-game.phtml
@@ -17,7 +17,7 @@ $sudoku = $this->sudoku;
         </div>
     </div>
 
-    <?php echo $this->partial('_extra/board.phtml', ['parameters' => $sudoku->getParameters()]); ?>
+    <?php echo $this->partial('_extra/sudoku-board.phtml'); ?>
 
     <?php echo $this->partial('_extra/sudoku-controls.phtml'); ?>
 
