--- a/application/modules/sudoku/views/scripts/index/index.phtml
+++ b/application/modules/sudoku/views/scripts/index/index.phtml
@@ -1,6 +1,6 @@
 <div class="right-column">
     <div class="section create-new-game-container">
-        <button class="new-game btn btn-success btn-large">Начать новую игру</button>
+        <button type="button" class="show-new-game-form btn btn-success btn-large">Начать новую игру</button>
     </div>
     <div class="section game-history-container">
         <div class="section-title">История ваших игр:</div>
@@ -142,7 +142,7 @@
             <a href="http://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%B4%D0%BE%D0%BA%D1%83" rel="nofollow" target="_blank" class="wiki-link">статью об игре</a>.
         </p>
         <div class="game-board-example">
-            <?php echo $this->partial('_extra/board.phtml', ['parameters' => $this->boardExample,]); ?>
+            <?php echo $this->partial('_extra/sudoku-board.phtml', ['parameters' => $this->boardExample,]); ?>
             <span class="image-info">(Пример головоломки "Судоку")</span>
         </div>
         <p>
@@ -150,7 +150,7 @@
             Необходимо заполнить поле цифрами от 1 до 9 так, чтоб в каждой колонке, строчке и под-квадрате не было повторяющихся цифр.
         </p>
         <div class="game-board-example">
-            <?php echo $this->partial('_extra/board.phtml', ['parameters' => $this->boardSolvedExample,]); ?>
+            <?php echo $this->partial('_extra/sudoku-board.phtml', ['parameters' => $this->boardSolvedExample,]); ?>
             <span class="image-info">(Пример решенной головоломки "Судоку")</span>
         </div>
         <div class="to-top">
