--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -1,30 +1,32 @@
+<?php
+$this->headLink()
+    ->appendStylesheet('/css/bootstrap.css')
+    ->appendStylesheet('/css/styles.css');
+
+$this->headScript()
+    ->prependFile('/js/sudoku.js')
+    ->prependFile('/js/user.js')
+    ->prependFile('/js/modal.js')
+    ->prependFile('/js/websocket.js')
+    ->prependFile('/js/common.js')
+    ->prependFile('/js/form.js')
+    ->prependFile('/js/global.js')
+    ->prependFile('/js/bootstrap.js')
+    ->prependFile('/js/jquery.md5.js')
+    ->prependFile('/js/jquery-2.0.3.js')
+;
+?>
+
+<?php header('Content-type: text/html; charset=utf-8'); ?>
 <?php echo $this->doctype() ?>
 <html>
 <head>
-    <?php $this->headLink()
-        ->appendStylesheet('/css/bootstrap.css')
-        ->appendStylesheet('/css/styles.css')
-    //        ->appendStylesheet('/css/styles.css')
-    //        ->appendStylesheet('/css/sudoku.css')
-    ?>
-    <?php echo $this->headLink() ?>
-    <?php echo $this->headTitle() ?>
-
-    <?php
-    $this->headScript()
-        ->prependFile('/js/sudoku.js')
-        ->prependFile('/js/user.js')
-        ->prependScript('window.websocket = new window.WS();')
-        ->prependFile('/js/websocket.js')
-        ->prependFile('/js/common.js')
-        ->prependFile('/js/form.js')
-        ->prependFile('/js/global.js')
-        ->prependFile('/js/bootstrap.js')
-        ->prependFile('/js/jquery.md5.js')
-        ->prependFile('/js/jquery-2.0.3.js')
+<?php
+    echo $this->headLink();
+    echo $this->headTitle();
 ?>
 </head>
-<body onload="gogogo();">
+<body>
 
 <?php echo $this->render('_extra/navigation.phtml'); ?>
 
@@ -41,6 +43,7 @@
     <div class="modal-body">
     </div>
 </div>
+<?php $this->headScript()->appendScript('window.$Modal = new window.Modal(\'#modal\');'); ?>
 
 <?php echo $this->headScript(); ?>
 </body>
